[gd_scene load_steps=5 format=3 uid="uid://bjojnbylojrt"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_rfk20"]
[ext_resource type="PackedScene" uid="uid://dimusiukkr1hh" path="res://Sprites/Zanna anims.aseprite" id="2_wshjl"]
[ext_resource type="PackedScene" uid="uid://bbtppyvu4b231" path="res://Sprites/Bow.aseprite" id="3_c2ojs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cojv8"]
size = Vector2(6, 10)

[node name="CharacterBody2D" type="CharacterBody2D"]
position = Vector2(-9.53674e-07, -9.53674e-07)
scale = Vector2(1.6, 1.6)
collision_layer = 3
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_rfk20")

[node name="Anims" parent="." instance=ExtResource("2_wshjl")]
position = Vector2(-0.124997, -0.124997)
animation = &"Death"
autoplay = "Idle"

[node name="Camera2D" type="Camera2D" parent="."]
visibility_layer = 513
position = Vector2(-0.124997, -0.124997)
zoom = Vector2(1.6, 1.6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.124997, -0.124997)
shape = SubResource("RectangleShape2D_cojv8")

[node name="TPTimer" type="Timer" parent="."]
one_shot = true

[node name="HealTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="InvulnerableTimer" type="Timer" parent="."]

[node name="Arco" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="Arco"]
position = Vector2(41.875, 0)

[node name="Bow" parent="Arco" instance=ExtResource("3_c2ojs")]
position = Vector2(4.875, -0.124995)
scale = Vector2(0.6875, 0.6875)
animation = &"Idle"
autoplay = "Idle"

[node name="Node2D" type="Node2D" parent="Arco"]
position = Vector2(-0.124997, -0.124997)

[node name="Marker2D" type="Marker2D" parent="Arco/Node2D"]
position = Vector2(15.125, 0.124998)

[node name="direction" type="Marker2D" parent="Arco/Node2D"]
position = Vector2(40.125, 0.124998)

[node name="Node2D2" type="Node2D" parent="Arco"]
position = Vector2(-0.124997, -0.124997)
rotation = 0.10472

[node name="Marker2D" type="Marker2D" parent="Arco/Node2D2"]
position = Vector2(15.125, 0.124998)

[node name="direction" type="Marker2D" parent="Arco/Node2D2"]
position = Vector2(40.125, 0.124998)

[node name="Node2D3" type="Node2D" parent="Arco"]
position = Vector2(-0.124997, -0.124997)
rotation = -0.10472

[node name="Marker2D" type="Marker2D" parent="Arco/Node2D3"]
position = Vector2(15.125, 0.124998)

[node name="direction" type="Marker2D" parent="Arco/Node2D3"]
position = Vector2(40.125, 0.124998)

[node name="FireRate" type="Timer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(0.447059, 1, 0.47451, 1)
light_mask = 512
visibility_layer = 512
offset_left = -13.0
offset_top = 8.0
offset_right = 13.0
offset_bottom = 12.0
show_percentage = false

[connection signal="timeout" from="TPTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="HealTimer" to="." method="_on_heal_timer_timeout"]
[connection signal="timeout" from="InvulnerableTimer" to="." method="_on_invulnerable_timer_timeout"]
[connection signal="timeout" from="FireRate" to="." method="_on_fire_rate_timeout"]
